ReSharper.FSharp/test/data/parsing/errors/Type member - Interface 01.fs
type T =
    interface I with
    member x.P = ()
